[gd_scene load_steps=6 format=3 uid="uid://bt5sosdm3tncx"]

[ext_resource type="Script" path="res://lib/ui/hud/hud_buttons.gd" id="1_516wc"]
[ext_resource type="Texture2D" uid="uid://dihk47hb2acqo" path="res://lib/ui/tex/icon_tool.png" id="1_bk4hk"]
[ext_resource type="Texture2D" uid="uid://cpnauxmpvkcdb" path="res://lib/ui/tex/icon_tool_hover.png" id="2_2xk7h"]
[ext_resource type="Texture2D" uid="uid://be4uc5abqc2xp" path="res://lib/ui/tex/icon_settings.png" id="3_oyxnh"]
[ext_resource type="Texture2D" uid="uid://bwi1wt5g52tle" path="res://lib/ui/tex/icon_settings_hover.png" id="4_yaykg"]

[node name="HUDButtons" type="CanvasLayer"]
script = ExtResource("1_516wc")

[node name="TopMenu" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 46.0
offset_right = 44.0
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DebugButton" type="TextureButton" parent="TopMenu"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("1_bk4hk")
texture_hover = ExtResource("2_2xk7h")

[node name="Pad" type="ColorRect" parent="TopMenu"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="SettingsButton" type="TextureButton" parent="TopMenu"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("3_oyxnh")
texture_hover = ExtResource("4_yaykg")

[node name="Delay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="mouse_entered" from="TopMenu/DebugButton" to="." method="_mouseover"]
[connection signal="pressed" from="TopMenu/DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="mouse_entered" from="TopMenu/SettingsButton" to="." method="_mouseover"]
[connection signal="pressed" from="TopMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
